Update guarantees.mdx: remove Section 2 language, replace 'pay' with 'reimburse', rewrite for internal audience, remove contact info, fix formatting

--- a/product/indirect-tax/guarantees.mdx
+++ b/product/indirect-tax/guarantees.mdx
@@ -1,34 +1,34 @@
 ---
 title: 'Service guarantees'
-description: 'Accuracy and on-time filing guarantees for indirect tax services'
+description: 'Internal reference for accuracy and on-time filing guarantees'
 icon: 'shield-check'
 ---
 
 ## Overview
 
-Commenda provides two service guarantees for indirect tax services: the Accuracy Guarantee and the On-Time Filing Guarantee. These guarantees protect customers from financial exposure due to Commenda's errors, subject to specific conditions and caps.
+Commenda provides two service guarantees for indirect tax services: the **Accuracy Guarantee** and the **On-Time Filing Guarantee**. These guarantees protect customers from financial exposure due to Commenda errors, subject to specific conditions and caps.
 
-Both guarantees are capped at the **Rolling ACV** - the fees paid to Commenda for the Services during the twelve (12) months preceding the tax period at issue.
+Both guarantees are capped at the **Rolling ACV** — the fees the customer paid to Commenda for Services during the twelve (12) months preceding the tax period at issue.
 
 ## Accuracy guarantee
 
 ### What's covered
 
-If you properly configure and use the Services and Commenda's tax calculation, rate, or taxability determination is inaccurate such that your return is filed incorrectly and a tax authority assesses uncollected sales tax, penalties, or interest (collectively, "Tax Shortfall"), Commenda will reimburse or credit you for the Tax Shortfall.
+If the customer properly configures and uses the Services and Commenda's tax calculation, rate, or taxability determination is inaccurate such that the return is filed incorrectly and a tax authority assesses uncollected sales tax, penalties, or interest (collectively, "Tax Shortfall"), Commenda will reimburse or credit the customer for the Tax Shortfall.
 
 ### Coverage cap
 
-Reimbursement is capped at the **Rolling ACV** - the fees you paid to Commenda during the twelve (12) months preceding the tax period at issue.
+Reimbursement is capped at the **Rolling ACV** — the fees the customer paid to Commenda during the twelve (12) months preceding the tax period at issue.
 
-### How it works
+### Process
 
-#### Step 1: Receive assessment notice
+#### Step 1: Customer receives assessment notice
 
-You receive a notice from a tax authority assessing uncollected sales tax, penalties, or interest due to an inaccuracy in Commenda's tax calculation, rate, or taxability determination.
+Customer receives a notice from a tax authority assessing uncollected sales tax, penalties, or interest due to an inaccuracy in Commenda's tax calculation, rate, or taxability determination.
 
-#### Step 2: Notify Commenda (within 14 days)
+#### Step 2: Customer notifies Commenda (within 14 days)
 
-You must notify Commenda in writing within **fourteen (14) days** after receiving the first notice of assessment.
+Customer must notify Commenda in writing within **fourteen (14) days** after receiving the first notice of assessment.
 
 **Required information:**
 - Copy of the assessment notice
@@ -37,14 +37,14 @@ You must notify Commenda in writing within **fourteen (14) days** after receivin
 - Amount assessed (tax, penalties, interest)
 - Description of the transactions at issue
 
-**How to notify:**
+**Notification channel:**
 - Email: [support contact]
-- Subject line: "Accuracy Guarantee Claim - [Your Company Name]"
-- Include all required documentation
+- Subject line: "Accuracy Guarantee Claim - [Company Name]"
+- All required documentation attached
 
-#### Step 3: Cooperate with investigation
+#### Step 3: Customer cooperation with investigation
 
-You must provide all relevant information and reasonably cooperate with Commenda's investigation and any effort to contest or mitigate the assessment.
+Customer must provide all relevant information and reasonably cooperate with Commenda's investigation and any effort to contest or mitigate the assessment.
 
 **This includes:**
 - Transaction data and records
@@ -54,7 +54,7 @@ You must provide all relevant information and reasonably cooperate with Commenda
 - Participation in calls or meetings as needed
 - Authorization for Commenda to communicate with tax authority (if needed)
 
-#### Step 4: Commenda investigates
+#### Step 4: Commenda investigation
 
 Commenda will:
 - Review the assessment and underlying transactions
@@ -66,8 +66,8 @@ Commenda will:
 #### Step 5: Resolution
 
 If the guarantee applies, Commenda will:
-- Reimburse you for the covered Tax Shortfall, or
-- Apply a credit to your account for the covered amount
+- Reimburse the customer for the covered Tax Shortfall, or
+- Apply a credit to the customer's account for the covered amount
 
 **Timeline:** Commenda will make a determination and provide reimbursement or credit within a reasonable timeframe after completing the investigation.
 
@@ -85,7 +85,7 @@ The Accuracy Guarantee does not apply to errors caused by:
 - Wrong customer classifications
 - Incomplete transaction data
 
-**Why it matters:** Commenda's calculations are only as accurate as the data provided. If you provide incorrect information or misconfigure the system, the guarantee doesn't apply.
+**Rationale:** Commenda's calculations are only as accurate as the data provided. Incorrect information or misconfigured systems shift responsibility to the customer.
 
 #### 2. Legal positions or classifications selected by customer
 
@@ -95,7 +95,7 @@ The Accuracy Guarantee does not apply to errors caused by:
 - Customer decides not to collect tax in a jurisdiction where they have nexus
 - Customer applies an exemption based on their legal position
 
-**Why it matters:** When you make legal or classification decisions, you own the outcome. Commenda provides tools and guidance, but ultimate responsibility for legal positions rests with you.
+**Rationale:** When customers make legal or classification decisions, they own the outcome. Commenda provides tools and guidance, but ultimate responsibility for legal positions rests with the customer.
 
 #### 3. Changes in law after the transaction date
 
@@ -105,7 +105,7 @@ The Accuracy Guarantee does not apply to errors caused by:
 - Jurisdiction changes sourcing rules
 - New exemption requirements imposed
 
-**Why it matters:** Commenda maintains current tax content, but cannot predict or be responsible for retroactive legal changes.
+**Rationale:** Commenda maintains current tax content but cannot predict or be responsible for retroactive legal changes.
 
 #### 4. Events outside Commenda's reasonable control
 
@@ -116,59 +116,59 @@ The Accuracy Guarantee does not apply to errors caused by:
 - Tax authority system errors
 - Jurisdiction provides incorrect guidance
 
-**Why it matters:** Commenda cannot guarantee against events beyond our control.
+**Rationale:** Commenda cannot guarantee against events beyond reasonable control.
 
 ### Sole and exclusive remedy
 
-The remedies in the Accuracy Guarantee are your sole and exclusive remedies for inaccuracies in tax calculations or content. This means:
+The remedies in the Accuracy Guarantee are the customer's sole and exclusive remedies for inaccuracies in tax calculations or content. This means:
 
-- You cannot seek additional damages beyond the Rolling ACV cap
-- You cannot pursue other legal remedies for covered inaccuracies
+- Customer cannot seek additional damages beyond the Rolling ACV cap
+- Customer cannot pursue other legal remedies for covered inaccuracies
 - The guarantee represents the full extent of Commenda's liability for calculation errors
 
 ## On-time filing guarantee
 
 ### What's covered
 
-If you have met all your obligations and Commenda fails to file a sales tax return by its statutory due date solely due to Commenda's error, Commenda will:
+If the customer has met all their obligations and Commenda fails to file a sales tax return by its statutory due date solely due to Commenda's error, Commenda will:
 
 1. **Complete and submit the delinquent filing** at no additional charge
 2. **Waive or refund any service fee** for that return
-3. **Pay any late-filing penalties and interest** imposed by the tax authority, up to the Rolling ACV cap
+3. **Reimburse any late-filing penalties and interest** imposed by the tax authority, up to the Rolling ACV cap
 
 ### Coverage cap
 
-Payment of penalties and interest is capped at the **Rolling ACV** - the fees you paid to Commenda during the twelve (12) months preceding the tax period at issue.
+Reimbursement of penalties and interest is capped at the **Rolling ACV** — the fees the customer paid to Commenda during the twelve (12) months preceding the tax period at issue.
 
-### How it works
+### Process
 
-#### Step 1: Discover missed deadline
+#### Step 1: Missed deadline discovered
 
-You discover that a return was not filed by its statutory due date, or you receive a penalty notice from a tax authority for late filing.
+Customer discovers that a return was not filed by its statutory due date, or receives a penalty notice from a tax authority for late filing.
 
-#### Step 2: Notify Commenda (within 10 days)
+#### Step 2: Customer notifies Commenda (within 10 days)
 
-You must notify Commenda within **ten (10) days** of discovering the missed deadline or receiving a penalty notice to qualify for the guarantee.
+Customer must notify Commenda within **ten (10) days** of discovering the missed deadline or receiving a penalty notice to qualify for the guarantee.
 
 **Required information:**
 - Jurisdiction and tax type
 - Filing period
 - Statutory due date
-- Date you discovered the issue or received penalty notice
+- Date customer discovered the issue or received penalty notice
 - Copy of penalty notice (if applicable)
 
-**How to notify:**
+**Notification channel:**
 - Email: [support contact]
-- Subject line: "On-Time Filing Guarantee Claim - [Your Company Name]"
-- Include all required documentation
+- Subject line: "On-Time Filing Guarantee Claim - [Company Name]"
+- All required documentation attached
 
-#### Step 3: Commenda investigates
+#### Step 3: Commenda investigation
 
 Commenda will:
 - Verify the statutory due date
 - Review the filing timeline and any communications
 - Determine if the late filing was solely due to Commenda's error
-- Verify that you met all your obligations
+- Verify that the customer met all their obligations
 - Assess whether any exclusions apply
 
 #### Step 4: Resolution
@@ -176,11 +176,11 @@ Commenda will:
 If the guarantee applies, Commenda will:
 1. **Immediately file the delinquent return** (if not already filed)
 2. **Waive or refund the service fee** for that return
-3. **Pay the late-filing penalties and interest** (up to Rolling ACV cap)
+3. **Reimburse the late-filing penalties and interest** (up to Rolling ACV cap)
 
-### Your obligations (Section 2 requirements)
+### Customer obligations
 
-To qualify for the On-Time Filing Guarantee, you must have met all obligations, which typically include:
+To qualify for the On-Time Filing Guarantee, the customer must have met all obligations:
 
 #### Timely data provision
 
@@ -190,9 +190,9 @@ To qualify for the On-Time Filing Guarantee, you must have met all obligations, 
 
 #### Sufficient funds
 
-- Maintain sufficient funds in your account for tax payments
-- Provide payment authorization in advance of due dates
-- Respond to payment issues promptly
+- Maintain sufficient funds in account for tax remittance
+- Provide remittance authorization in advance of due dates
+- Respond to remittance issues promptly
 
 #### Required tax accounts
 
@@ -203,7 +203,7 @@ To qualify for the On-Time Filing Guarantee, you must have met all obligations, 
 #### Timely approvals
 
 - Review and approve returns by agreed-upon deadlines
-- Respond to questions or issues that require your input
+- Respond to questions or issues that require customer input
 - Provide necessary documentation when requested
 
 #### Accurate configuration
@@ -224,17 +224,17 @@ The On-Time Filing Guarantee does not apply to late filings caused by:
 - Data quality issues that delay processing
 - Integration failures on customer's side
 
-**Why it matters:** Commenda cannot file returns without complete, accurate data. Late data provision shifts responsibility to you.
+**Rationale:** Commenda cannot file returns without complete, accurate data. Late data provision shifts responsibility to the customer.
 
 #### 2. Insufficient funds
 
 **Examples:**
-- Insufficient balance for tax payment
-- Payment authorization not provided
-- Payment method declined or failed
-- Customer delays payment approval
+- Insufficient balance for tax remittance
+- Remittance authorization not provided
+- Remittance method declined or failed
+- Customer delays remittance approval
 
-**Why it matters:** Returns cannot be filed without payment. Ensuring sufficient funds is your responsibility.
+**Rationale:** Returns cannot be filed without remittance. Ensuring sufficient funds is the customer's responsibility.
 
 #### 3. Failure to maintain required tax accounts
 
@@ -244,7 +244,7 @@ The On-Time Filing Guarantee does not apply to late filings caused by:
 - Filing authorization revoked or expired
 - Account locked due to prior issues
 
-**Why it matters:** Commenda cannot file to accounts that are not active and accessible.
+**Rationale:** Commenda cannot file to accounts that are not active and accessible.
 
 #### 4. Events outside Commenda's reasonable control
 
@@ -254,7 +254,7 @@ The On-Time Filing Guarantee does not apply to late filings caused by:
 - Third-party service failures
 - Jurisdiction changes filing requirements without notice
 
-**Why it matters:** Commenda cannot guarantee against events beyond our control.
+**Rationale:** Commenda cannot guarantee against events beyond reasonable control.
 
 #### 5. Customer delays in approvals or responses
 
@@ -264,7 +264,7 @@ The On-Time Filing Guarantee does not apply to late filings caused by:
 - Required documentation not provided
 - Customer unavailable during critical filing window
 
-**Why it matters:** Filing deadlines require timely customer participation. Delays on your end shift responsibility to you.
+**Rationale:** Filing deadlines require timely customer participation. Delays on the customer's end shift responsibility to them.
 
 ## Guarantee comparison
 
@@ -277,39 +277,39 @@ The On-Time Filing Guarantee does not apply to late filings caused by:
 | **Key exclusion** | Customer data/configuration errors | Customer delays or insufficient funds |
 | **Cooperation required** | Yes - investigation and mitigation | Yes - meeting all obligations |
 
-## How to maximize guarantee protection
+## Maximizing guarantee protection
 
 ### For accuracy guarantee
 
-#### 1. Provide complete, accurate data
+#### 1. Complete, accurate data
 
 - Verify addresses are correct and complete
 - Ensure product taxability mappings are accurate
 - Keep exemption certificates current
 - Maintain accurate nexus settings
 
-#### 2. Configure properly
+#### 2. Proper configuration
 
 - Follow Commenda's configuration guidance
 - Test configurations before going live
 - Review configuration regularly
 - Update settings when business changes
 
-#### 3. Document everything
+#### 3. Documentation
 
 - Keep records of all transactions
 - Save configuration settings and changes
 - Document legal positions and decisions
 - Maintain audit trail
 
-#### 4. Notify promptly
+#### 4. Prompt notification
 
 - Monitor for assessment notices
 - Notify Commenda within 14 days
 - Provide complete documentation
 - Respond to information requests quickly
 
-#### 5. Cooperate fully
+#### 5. Full cooperation
 
 - Participate in investigation
 - Provide requested information
@@ -332,14 +332,14 @@ The On-Time Filing Guarantee does not apply to late filings caused by:
 - Keep credentials current
 - Monitor account status
 
-#### 3. Ensure data quality
+#### 3. Data quality
 
 - Validate data before submission
 - Address data quality issues promptly
 - Test integrations regularly
 - Monitor data feeds
 
-#### 4. Communicate proactively
+#### 4. Proactive communication
 
 - Notify Commenda of business changes
 - Report issues immediately
@@ -351,84 +351,86 @@ The On-Time Filing Guarantee does not apply to late filings caused by:
 - Build buffer time before deadlines
 - Don't wait until last minute for approvals
 - Address issues early
-- Maintain backup payment methods
+- Maintain backup remittance methods
 
 ## Common guarantee scenarios
 
 ### Scenario 1: Inaccurate rate applied
 
-**Situation:** Commenda applied a 7% rate when the correct rate was 8%. Tax authority assesses $5,000 in uncollected tax plus $500 in penalties and interest.
+**Situation:** Commenda applied a 7% rate when the correct rate was 8%. The tax authority assesses:
+- $5,000 in uncollected tax
+- $500 in penalties and interest
 
 **Guarantee applies?** Yes, if:
-- You provided correct address and transaction data
-- You properly configured the system
-- You notify within 14 days
-- You cooperate with investigation
+- Customer provided correct address and transaction data
+- Customer properly configured the system
+- Customer notified within 14 days
+- Customer cooperated with investigation
 
 **Covered amount:** $5,500 (tax + penalties + interest), up to Rolling ACV cap
 
 ### Scenario 2: Wrong product taxability
 
-**Situation:** You classified a product as non-taxable based on your legal interpretation. Tax authority disagrees and assesses $10,000.
+**Situation:** Customer classified a product as non-taxable based on their legal interpretation. Tax authority disagrees and assesses $10,000.
 
-**Guarantee applies?** No - this is a legal position selected by customer (exclusion #2)
+**Guarantee applies?** No — this is a legal position selected by customer (exclusion #2)
 
-**Your responsibility:** You own the outcome of legal classification decisions
+**Responsibility:** Customer owns the outcome of legal classification decisions
 
 ### Scenario 3: Late filing due to customer data delay
 
-**Situation:** You provided transaction data 3 days late. Commenda filed the return 2 days after the due date. Tax authority assesses $200 in late-filing penalties.
+**Situation:** Customer provided transaction data 3 days late. Commenda filed the return 2 days after the due date. Tax authority assesses $200 in late-filing penalties.
 
-**Guarantee applies?** No - late filing was caused by customer's delayed data (exclusion #1)
+**Guarantee applies?** No — late filing was caused by customer's delayed data (exclusion #1)
 
-**Your responsibility:** You're responsible for penalties due to your data delay
+**Responsibility:** Customer is responsible for penalties due to their data delay
 
 ### Scenario 4: Late filing due to Commenda error
 
-**Situation:** You provided all data on time and approved the return 5 days before the due date. Commenda failed to submit the return due to an internal processing error. Tax authority assesses $300 in penalties.
+**Situation:** Customer provided all data on time and approved the return 5 days before the due date. Commenda failed to submit the return due to an internal processing error. Tax authority assesses $300 in penalties.
 
 **Guarantee applies?** Yes, if:
-- You met all obligations (timely data, approval, sufficient funds)
-- You notify within 10 days
+- Customer met all obligations (timely data, approval, sufficient funds)
+- Customer notified within 10 days
 - Late filing was solely due to Commenda's error
 
 **Covered amount:** $300 in penalties + fee waiver for that return, up to Rolling ACV cap
 
 ### Scenario 5: Incorrect address provided
 
-**Situation:** You provided a billing address instead of shipping address. Commenda calculated tax for the wrong jurisdiction. Tax authority assesses $3,000 in uncollected tax.
+**Situation:** Customer provided a billing address instead of shipping address. Commenda calculated tax for the wrong jurisdiction. Tax authority assesses $3,000 in uncollected tax.
 
-**Guarantee applies?** No - this is customer's incorrect data (exclusion #1)
+**Guarantee applies?** No — this is customer's incorrect data (exclusion #1)
 
-**Your responsibility:** You're responsible for providing correct addresses
+**Responsibility:** Customer is responsible for providing correct addresses
 
 ### Scenario 6: Retroactive law change
 
 **Situation:** A jurisdiction retroactively changed a product's taxability. Commenda's calculation was correct at the time of transaction but is now deemed incorrect. Tax authority assesses $8,000.
 
-**Guarantee applies?** No - this is a change in law after the transaction date (exclusion #3)
+**Guarantee applies?** No — this is a change in law after the transaction date (exclusion #3)
 
-**Your responsibility:** Retroactive law changes are not covered by the guarantee
+**Responsibility:** Retroactive law changes are not covered by the guarantee
 
-## Frequently asked questions
+## FAQ
 
 ### What is "Rolling ACV"?
 
-Rolling ACV is the total fees you paid to Commenda for the Services during the twelve (12) months preceding the tax period at issue. This is the cap for both guarantees.
+Rolling ACV is the total fees the customer paid to Commenda for the Services during the twelve (12) months preceding the tax period at issue. This is the cap for both guarantees.
 
-**Example:** If the tax period at issue is Q2 2024, Rolling ACV is the fees you paid from Q2 2023 through Q1 2024.
+**Example:** If the tax period at issue is Q2 2024, Rolling ACV is the fees paid from Q2 2023 through Q1 2024.
 
-### Can I get more than Rolling ACV in coverage?
+### Can the customer get more than Rolling ACV in coverage?
 
-No. Both guarantees are capped at Rolling ACV. This is your maximum recovery under either guarantee.
+No. Both guarantees are capped at Rolling ACV. This is the maximum recovery under either guarantee.
 
-### What if I disagree with Commenda's determination?
+### What if the customer disagrees with Commenda's determination?
 
-If you believe the guarantee should apply but Commenda determines it doesn't, you should:
-1. Request a detailed explanation of the determination
-2. Provide any additional information that supports your position
+If the customer believes the guarantee should apply but Commenda determines it doesn't:
+1. Provide a detailed explanation of the determination
+2. Request any additional information that supports their position
 3. Escalate to executive team if needed
-4. Review your service agreement for dispute resolution procedures
+4. Review the service agreement for dispute resolution procedures
 
 ### Do the guarantees cover state income tax or other taxes?
 
@@ -441,32 +443,32 @@ Each issue is evaluated separately. However, the total recovery across all issue
 ### How long does the investigation take?
 
 Investigation timelines vary based on complexity. Commenda will:
-- Acknowledge your claim within 2 business days
+- Acknowledge the claim within 2 business days
 - Provide initial assessment within 10 business days
 - Complete investigation within 30 days (for most cases)
 - Communicate timeline if more time is needed
 
 ### What if the tax authority is wrong?
 
-If Commenda believes the tax authority's assessment is incorrect, we will:
-- Work with you to contest the assessment
+If Commenda believes the tax authority's assessment is incorrect:
+- Work with the customer to contest the assessment
 - Provide supporting documentation and analysis
 - Participate in appeals or protests (as appropriate)
 - Help minimize or eliminate the assessment
 
 If the assessment is successfully reduced or eliminated, the guarantee covers only the final assessed amount.
 
-### Can I purchase additional coverage?
+### Can the customer purchase additional coverage?
 
-The guarantees are included with your service agreement and cannot be increased beyond Rolling ACV. However, you may want to consider:
-- Maintaining your own tax liability insurance
-- Increasing your Rolling ACV by using more Commenda services
-- Working with your insurance broker on additional coverage
+The guarantees are included with the service agreement and cannot be increased beyond Rolling ACV. Options to consider:
+- Maintaining their own tax liability insurance
+- Increasing Rolling ACV by using more Commenda services
+- Working with their insurance broker on additional coverage
 
 ### What happens if Commenda goes out of business?
 
-The guarantees are only valid while Commenda is operating. Consider:
-- Maintaining your own documentation and records
+The guarantees are only valid while Commenda is operating. Customers should consider:
+- Maintaining their own documentation and records
 - Having backup tax service providers identified
 - Maintaining tax liability insurance
 - Keeping sufficient reserves for potential tax liabilities
@@ -475,37 +477,24 @@ The guarantees are only valid while Commenda is operating. Consider:
 
 ### Do's
 
-- **Notify promptly** - Don't wait until the deadline
-- **Provide complete documentation** - Include everything requested
-- **Cooperate fully** - Respond quickly to information requests
-- **Document everything** - Keep records of all communications
-- **Be professional** - Work collaboratively with Commenda
-- **Follow up** - Check on status if you haven't heard back
+- **Notify promptly** — Don't wait until the deadline
+- **Provide complete documentation** — Include everything requested
+- **Cooperate fully** — Respond quickly to information requests
+- **Document everything** — Keep records of all communications
+- **Be professional** — Work collaboratively with Commenda
+- **Follow up** — Check on status if there's no response
 
 ### Don'ts
 
-- **Don't delay notification** - Missing the deadline disqualifies your claim
-- **Don't withhold information** - Full disclosure is required
-- **Don't ignore requests** - Lack of cooperation can disqualify your claim
-- **Don't make assumptions** - Ask questions if you're unsure
-- **Don't escalate prematurely** - Give the process time to work
-- **Don't agree to settlements** - Consult with Commenda before agreeing to anything with tax authority
+- **Don't delay notification** — Missing the deadline disqualifies the claim
+- **Don't withhold information** — Full disclosure is required
+- **Don't ignore requests** — Lack of cooperation can disqualify the claim
+- **Don't make assumptions** — Ask questions if unsure
+- **Don't escalate prematurely** — Give the process time to work
+- **Don't agree to settlements** — Consult with Commenda before agreeing to anything with tax authority
 
 ## Related documentation
 
-- [Incident Response SOP](/product/indirect-tax/incident-response-sop/overview) - How Commenda handles tax incidents
-- [Scenario classification](/product/indirect-tax/incident-response-sop/scenarios) - Types of tax issues and remedies
-- [Communication templates](/product/indirect-tax/incident-response-sop/templates) - Templates for customer communications
-
-## Contact information
-
-For guarantee claims or questions:
-
-- **Email:** [support contact]
-- **Subject line format:** "Accuracy Guarantee Claim" or "On-Time Filing Guarantee Claim"
-- **Include:** Your company name, account number, and brief description
-
-For general questions about guarantees:
-- Review your service agreement
-- Contact your account manager
-- Email [support contact]
+- [Incident Response SOP](/product/indirect-tax/incident-response-sop/overview) — How Commenda handles tax incidents
+- [Scenario classification](/product/indirect-tax/incident-response-sop/scenarios) — Types of tax issues and remedies
+- [Communication templates](/product/indirect-tax/incident-response-sop/templates) — Templates for customer communications
